kubernetes/apps/omada-system/omada-controller/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: omada-controller
  name: omada-controller
  namespace: omada
spec:
  type: ClusterIP
  selector:
    app: omada-controller
  ports:
    - name: manage-http
      protocol: TCP
      port: 8088
    - name: manage-https
      protocol: TCP
      port: 8043
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: omada-controller
  name: omada-controller-comm
  namespace: omada
spec:
  type: ClusterIP
  selector:
    app: omada-controller
  ports:
    - name: portal-https
      protocol: TCP
      port: 8843
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: omada-controller
  name: omada-controller-lb
  namespace: omada
  annotations:
    io.cilium/lb-ipam-ips: 192.168.2.249
spec:
  type: LoadBalancer
  selector:
    app: omada-controller
  ports:
    - name: portal-https
      protocol: TCP
      port: 8843
    - name: manage-http
      protocol: TCP
      port: 8088
    - name: manage-https
      protocol: TCP
      port: 8043
    - name: adopt-v1
      protocol: TCP
      port: 29812
    - name: upgrade-v1
      protocol: TCP
      port: 29813
    - name: manager-v2
      protocol: TCP
      port: 29814
    - name: transfer-v2
      protocol: TCP
      port: 29815
    - name: rtty
      protocol: TCP
      port: 29816
    - name: app-discovery
      protocol: UDP
      port: 27001
    - name: discovery
      protocol: UDP
      port: 29810
